--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "yargs": "^4.2.0"
   },
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "express-winston": "^1.2.0",
+    "request": "^2.69.0",
     "winston": "^2.2.0"
   }
 }
