--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
   "devDependencies": {
     "AngularJS": "angular-latest#~1.5.0",
     "angular-ui-calendar": "~1.0.1",
-    "angular-material": "~1.0.6"
+    "angular-material": "~1.0.6",
+    "jquery": "~2.2.1"
   },
   "resolutions": {
     "angular": "1.5.0"
