--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   },
   "author": "David Hansen",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
+    "body-parser": "^1.15.0",
+    "bower": "^1.7.7",
+    "express": "^4.13.4",
+    "express-winston": "^1.2.0",
+    "request": "^2.69.0",
+    "winston": "^2.2.0",
     "coffee-script": "^1.10.0",
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.1",
@@ -23,13 +29,5 @@
     "gulp-stylus": "^2.3.0",
     "gulp-uglify": "^1.5.3",
     "yargs": "^4.2.0"
-  },
-  "dependencies": {
-    "body-parser": "^1.15.0",
-    "bower": "^1.7.7",
-    "express": "^4.13.4",
-    "express-winston": "^1.2.0",
-    "request": "^2.69.0",
-    "winston": "^2.2.0"
   }
 }
