--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "bower": "^1.7.7",
+    "coffee-script": "^1.10.0",
     "express": "^4.13.4",
     "express-winston": "^1.2.0",
-    "request": "^2.69.0",
-    "winston": "^2.2.0",
-    "coffee-script": "^1.10.0",
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
@@ -28,6 +26,11 @@
     "gulp-replace": "^0.5.4",
     "gulp-stylus": "^2.3.0",
     "gulp-uglify": "^1.5.3",
+    "jade": "^1.11.0",
+    "nodemailer": "^2.3.0",
+    "request": "^2.69.0",
+    "sugar": "^1.4.1",
+    "winston": "^2.2.0",
     "yargs": "^4.2.0"
   }
 }
