--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-replace": "^0.5.4",
     "gulp-stylus": "^2.3.0",
     "gulp-uglify": "^1.5.3",
+    "icalevent": "^0.3.2",
     "jade": "^1.11.0",
     "nodemailer": "^2.3.0",
     "request": "^2.69.0",
